cve/network/cnp-cve-2020-13946-ingress-deny-jmx-port-exposure-externally.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: cnp-cve-2020-13946-ingress-deny-jmx-port-exposure-externally
  namespace: default        #change default namespace to match your namespace
spec:
  description: "To block JMX port exposure over the internet"
  endpointSelector:
    matchLabels:
      app: cass-server      #change app: cassandra to match your label
  ingressDeny:
  - fromEntities:
    - "world"
    toPorts:
    - ports:
      - port: "7199"
        protocol: "TCP"
  ingress:
  - fromEntities:
    - "all"
